--- a/commandlib/commandlib.csproj
+++ b/commandlib/commandlib.csproj
@@ -43,6 +43,8 @@
     <Compile Include="ActionBase.cs" />
     <Compile Include="CopyFile.cs" />
     <Compile Include="CopyFolder.cs" />
+    <Compile Include="DeleteFiles.cs" />
+    <Compile Include="DeleteFolders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZipFolder.cs" />
   </ItemGroup>
