--- a/commandlib/commandlib.csproj
+++ b/commandlib/commandlib.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DeleteFiles.cs" />
     <Compile Include="DeleteFolders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WaitAction.cs" />
     <Compile Include="ZipFolder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
