--- a/commandlib/commandlib.csproj
+++ b/commandlib/commandlib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CopyFolder.cs" />
     <Compile Include="DeleteFiles.cs" />
     <Compile Include="DeleteFolders.cs" />
+    <Compile Include="ExecuteProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WaitAction.cs" />
     <Compile Include="ZipFolder.cs" />
