show dialog new action

--- a/action_flow/action_flow.csproj
+++ b/action_flow/action_flow.csproj
@@ -59,4 +59,14 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)commandlib.dll" "%25mroot%25\system\bin\action_flow\" /Y
+xcopy "$(ProjectDir)$(OutDir)commandlib.pdb" "%25mroot%25\system\bin\action_flow\" /Y
+xcopy "$(ProjectDir)$(OutDir)project_manager.dll" "%25mroot%25\system\bin\action_flow\" /Y
+xcopy "$(ProjectDir)$(OutDir)project_manager.pdb" "%25mroot%25\system\bin\action_flow\" /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
