--- a/commandlib/commandlib.csproj
+++ b/commandlib/commandlib.csproj
@@ -34,12 +34,14 @@
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionBase.cs" />
@@ -49,6 +51,7 @@
     <Compile Include="DeleteFolders.cs" />
     <Compile Include="ExecuteProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShowDialog.cs" />
     <Compile Include="WaitAction.cs" />
     <Compile Include="ZipFolder.cs" />
   </ItemGroup>
