remove unused using statements

--- a/action_flow/action_flow.csproj
+++ b/action_flow/action_flow.csproj
@@ -68,6 +68,7 @@
     <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)commandlib.dll" "%25mroot%25\system\bin\action_flow\" /Y
 xcopy "$(ProjectDir)$(OutDir)commandlib.pdb" "%25mroot%25\system\bin\action_flow\" /Y
 xcopy "$(ProjectDir)$(OutDir)project_manager.dll" "%25mroot%25\system\bin\action_flow\" /Y
-xcopy "$(ProjectDir)$(OutDir)project_manager.pdb" "%25mroot%25\system\bin\action_flow\" /Y</PostBuildEvent>
+xcopy "$(ProjectDir)$(OutDir)project_manager.pdb" "%25mroot%25\system\bin\action_flow\" /Y
+xcopy "$(ProjectDir)$(OutDir)action_flow.exe" "%25mroot%25\system\bin\action_flow\" /Y</PostBuildEvent>
   </PropertyGroup>
 </Project>
