--- a/action_flow/action_flow.csproj
+++ b/action_flow/action_flow.csproj
@@ -34,9 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="mroot, Version=1.0.0.0, Culture=neutral, PublicKeyToken=703d14e93e42dd28, processorArchitecture=MSIL">
+    <Reference Include="mroot, Version=1.0.0.0, Culture=neutral, PublicKeyToken=183bc9f6fbf437e4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\mroot\v4.0_1.0.0.0__703d14e93e42dd28\mroot.dll</HintPath>
+      <HintPath>..\..\..\..\system\lib\mroot.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
