--- a/project_manager/project_manager.csproj
+++ b/project_manager/project_manager.csproj
@@ -31,9 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="mroot, Version=1.0.0.0, Culture=neutral, PublicKeyToken=703d14e93e42dd28, processorArchitecture=MSIL">
+    <Reference Include="mroot, Version=1.0.0.0, Culture=neutral, PublicKeyToken=183bc9f6fbf437e4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\mroot\v4.0_1.0.0.0__703d14e93e42dd28\mroot.dll</HintPath>
+      <HintPath>..\..\..\..\system\lib\mroot.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
