--- a/commandlib/commandlib.csproj
+++ b/commandlib/commandlib.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ActionBase.cs" />
     <Compile Include="ControlFlow.cs" />
     <Compile Include="CopyFile.cs" />
+    <Compile Include="NewFolder.cs" />
     <Compile Include="CopyFolder.cs" />
     <Compile Include="DeleteFolder.cs" />
     <Compile Include="DeleteFile.cs" />
