--- a/action_flow/action_flow.csproj
+++ b/action_flow/action_flow.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -60,16 +75,26 @@
       <Name>project_manager</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.8">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.8 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)commandlib.dll" "%25mroot%25\system\bin\action_flow\" /Y
-xcopy "$(ProjectDir)$(OutDir)commandlib.pdb" "%25mroot%25\system\bin\action_flow\" /Y
-xcopy "$(ProjectDir)$(OutDir)project_manager.dll" "%25mroot%25\system\bin\action_flow\" /Y
-xcopy "$(ProjectDir)$(OutDir)project_manager.pdb" "%25mroot%25\system\bin\action_flow\" /Y
+    <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)*.dll" "%25mroot%25\system\bin\action_flow\" /Y
+xcopy "$(ProjectDir)$(OutDir)*.config" "%25mroot%25\system\bin\action_flow\" /Y
 xcopy "$(ProjectDir)$(OutDir)action_flow.exe" "%25mroot%25\system\bin\action_flow\" /Y</PostBuildEvent>
   </PropertyGroup>
 </Project>
